# symphony

./: ELIXIR_TO_RUST.md
rust/: Cargo.toml  README.md
rust/src/: config.rs  dashboard.rs  error.rs  issue.rs  lib.rs  log_file.rs  main.rs  orchestrator.rs  path_safety.rs  prompt.rs  pubsub.rs  server.rs  ssh.rs  web_dashboard.rs  worker.rs  workflow.rs  workspace.rs
rust/src/agent/: mod.rs
rust/src/tracker/: linear.rs  memory.rs  mod.rs
