[package]
name = "symphony"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4.5.39", features = ["derive", "env"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
futures = "0.3.31"
minijinja = { version = "2.12.0", features = ["builtins", "loader", "serde"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.16", features = ["codec", "io", "rt"] }
tower = "0.5"
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.23.0"
wiremock = "0.6.5"
